全局配置1.0 zookeeper配置连接数据库测试通过

--- a/ZkOperating_8120/src/main/resources/application.yml
+++ b/ZkOperating_8120/src/main/resources/application.yml
@@ -4,3 +4,7 @@ server:
 mybatis-plus:
   mapper-locations: classpath:static/mybatis/mapper/*.xml
 
+zk:
+  ip: 127.0.0.1
+root:
+  node: /ruyixingDevelopment/ZkOperating_8120
